# JpegConv

./: CMakeLists.txt  README.md
src/: main.cpp
src/jpegconv/: JpegConv.cpp  JpegConv.hpp  JpegConvFilters.cpp  JpegDecoder.cpp  JpegDecoder.hpp  JpegEncoder.cpp  JpegEncoder.hpp
